# P2C

./: .gitignore  README.md  config.py  main.py  package-lock.json  package.json  requirements.txt  tsconfig.tsbuildinfo  vercel.json
agents/: analyzer.py  test_generator.py  translator.py
app/: globals.css  layout.tsx  page.tsx
app/api/modernize/: route.ts
backend/: __init__.py  main.py  pyproject.toml
backend/agents/: analyzer.py  base.py  evaluator.py  test_generator.py  translator.py
backend/models/: schemas.py
backend/p2c.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/services/: llm_service.py
backend/tests/: __init__.py  conftest.py  test_pipeline.py
backend/utils/: prompts.py
models/: schemas.py
routers/: modernize.py
services/: openai_service.py
utils/: code_utils.py
