[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "p2c"
version = "2.0.0"
description = "AI-powered legacy code modernization pipeline — P2C"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.128.1",
    "openai>=1.75.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]

